--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   "homepage": "https://github.com/Uchenna-ibute/Leaderboard#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.6.0",
+    "stylelint-config-css-modules": "^4.1.0",
+    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-scss": "^4.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "stylelint-csstree-validator": "^2.1.0"
   }
 }
