--- a/package.json
+++ b/package.json
@@ -20,24 +20,23 @@
   },
   "homepage": "https://github.com/Uchenna-ibute/Leaderboard#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.3",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.27.5",
+    "hint": "^7.1.3",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
-    "stylelint": "^14.6.0",
-    "stylelint-config-css-modules": "^4.1.0",
-    "stylelint-config-standard": "^29.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-scss": "^4.2.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "eslint": "^8.33.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-markdown": "^3.0.0",
-    "stylelint-csstree-validator": "^2.1.0"
+    "lodash": "^4.17.21"
   }
 }
